<resources>
    <string name="app_name">Nidec Assets Manager</string>
    <string name="version_app">5/2024</string>
    <string name="action_back">Back</string>
    <string name="check_in">CHECK-IN</string>
    <string name="check_out">CHECKOUT</string>
    <string name="maintenance">MAINTENANCE</string>
    <string name="auditRFID">Audit RFID</string>
    <string name="button_text">Button Text</string>
    <string name="nidec_logo">Nidec logo</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="read_a_barcode">Read a barcode</string>
    <string name="asset_tag">Asset tag</string>
    <string name="search">SEARCH</string>
    <string name="device_information">Device information</string>
    <string name="submit">Submit</string>
    <string name="add_new_maintenance">Add new maintenance</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_maintenances_for_this_asset">No maintenances for this asset</string>
    <string name="text_icon_for_common_field">Text icon for common field</string>
    <string name="assets_management">ASSETS MANAGEMENT</string>
    <string name="setting">SETTINGS</string>
    <string name="snipe_it_server_address">Snipe-IT server address</string>
    <string name="configure_server">Configure server</string>
    <string name="server_sample">http://192.168.0.190:4402</string>
    <string name="information">Information</string>
    <string name="application_version">Application version</string>
    <string name="snipeit_server_address">SnipeIT server address</string>
    <string name="server_address">Server address</string>
    <string name="set_server_eg">Set your server address e.g., https://develop.snipeitapp.com</string>
    <string name="write_your_api_key_here">Write your api key here</string>
    <string name="api_key">Api key</string>
    <string name="configure_app">CONFIGURE APP</string>
    <string name="default_configuration_demo">DEFAULT CONFIGURATION (DEMO)</string>
    <string name="use_an_alternative_method">Use an alternative method</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hide_unhide_password">hide_unhide_password</string>
    <string name="show_password">Show password</string>
    <string name="checkout">Checkout</string>
    <string name="customized_fields_based_on_category">Customized fields based on category</string>
    <string name="custom_fields">Custom fields</string>
    <string name="appearance_configuration">Appearance Configuration</string>
    <string name="custom_field_guide">Select a category to customize the allowed display fields</string>
    <string name="transfer">TRANSFER</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_username">Enter your username</string>
    <string name="select_fields_to_allow_display">Select fields to allow display</string>
    <string name="save">Save</string>
    <string name="server_url">Server URL</string>
    <string name="remove_all_text">Remove all text</string>
    <string name="audit">AUDIT</string>
    <string name="inventory_number">Inventory Number</string>
    <string name="asset_name">Asset name</string>
    <string name="asset_no">Asset No</string>
    <string name="department">Department</string>
    <string name="_snipeit_cost_center_29">Cost Center</string>
    <string name="label_status">Label Status</string>
    <string name="asset_status">Asset Status</string>
    <string name="location">Location</string>
    <string name="good">Good</string>
    <string name="blur">Blur</string>
    <string name="using">Using</string>
    <string name="no_use">No Use</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="import_asset">IMPORT ASSET</string>
    <string name="input_scan">Input Scan</string>
    <string name="equipment_request">EQUIPMENT REQUEST</string>
    <string name="name_region">EN</string>
    <string name="last_used">Last Used</string>
    <string name="confirm_audit">Confirm Audit</string>
    <string name="input_text">Input text to search</string>
    <string name="start_audit_date">Start Audit Date</string>
    <string name="end_audit_date">End Audit Date</string>
    <string name="export_goods">Export</string>
    <string name="confirm_goods">Confirm</string>
    <string name="total">Total</string>
    <string name="ID">ID</string>
    <string name="UserID">UserID</string>
    <string name="create_date">Create Date</string>
    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="all_asset">All Asset </string>
    <string name="compare">Asset Compare</string>
    <string name="rfid_scan">RFID scan</string>
    <string-array name="asset_status_array">
        <item>A: Available to use</item>
        <item>B: Available to use after repairing</item>
        <item>C: Unable to use or out-of-date</item>
    </string-array>
    <string name="custom_dateAudit">Custom Date Audit</string>
    <string name="language">Language</string>
    <string name="toast_permissionUser">You do not have access to PremissionUser</string>
    <string name="production_delivery">Production Delivery</string>
    <string name="device_details">Device details</string>
    <string name="maintenance_list">Maintenance list</string>
    <string name="equipment_detail">Equipment Details</string>
    <string name="scan_assign_asset">Scan Asset</string>
    <string name="empty">Content is empty</string>
</resources>