<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/nidec_logo"
            android:src="@drawable/logo_nidec" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_gravity="center"
            android:textColor="@color/button_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/assets_management"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_view"
        android:textColor="@color/button_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/login"/>

    <LinearLayout
        android:id="@+id/icon_username_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:orientation="horizontal"
        android:layout_below="@id/login_title"
        >

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/username" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:orientation="horizontal"
        android:layout_below="@id/icon_username_view"
        >
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_lock"
            android:contentDescription="@string/username" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:autofillHints="" />

            <ImageButton
                android:id="@+id/show_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/password_edit_text"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_screen"
                android:src="@drawable/ic_unhide"
                android:background="@null"
                android:visibility="gone"
                android:contentDescription="@string/show_password" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_password"
        android:paddingVertical="@dimen/margin_screen"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/white"
        android:text="@string/login"/>

    <Button
        android:id="@+id/configure_server_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:paddingVertical="@dimen/margin_screen"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/white"
        android:text="@string/configure_server"/>

</RelativeLayout>
