<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/nidec_logo"
                android:src="@drawable/logo_nidec" />

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">

                <!-- Button 1 -->
                <Button
                    android:id="@+id/checkin_btn"
                    style="@style/ButtonCustomStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    android:drawableTop="@drawable/main_check_in"
                    android:text="@string/check_in" />

                <!-- Button 2 -->
                <Button
                    android:id="@+id/checkout_btn"
                    style="@style/ButtonCustomStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="12dp"
                    android:drawableTop="@drawable/main_check_out"
                    android:text="@string/check_out" />

                <!-- Button 3 -->
                <Button
                    android:id="@+id/maintenance_btn"
                    style="@style/ButtonCustomStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="2"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:drawableTop="@drawable/main_maintenance"
                    android:text="@string/maintenance" />

            </GridLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>