<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv"
        android:layout_width="411dp"
        android:layout_height="108dp"
        android:layout_marginHorizontal="@dimen/half_margin_screen"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
    <!--   Label Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
    <!--   Asset Status-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asset_status"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Spinner
                android:id="@+id/spinnerAssetStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                style="@style/SpinnerCustomStyle"
                />
<!--        </LinearLayout>-->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
    <!--   Location-->

    <LinearLayout
        android:id="@+id/lnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Last Used"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bntdatePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="JAN 01 2020"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <!--   Button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/label_status"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <RadioGroup
                android:id="@+id/radioGroupLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdoLabelGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/rdoLabelNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_use" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bntAudit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/margin_screen"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/white"
            android:text="@string/confirm_audit"/>
    </LinearLayout>
</LinearLayout>