<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<!--    <LinearLayout-->
<!--        android:id="@+id/configure_server"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:background="?android:attr/selectableItemBackground"-->
<!--        android:focusable="true"-->
<!--        android:clickable="true"-->
<!--        android:padding="@dimen/margin_screen">-->
<!--        <TextView-->
<!--            android:id="@+id/header_item_setting"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/snipe_it_server_address"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="?android:attr/textColorPrimary" />-->

<!--        <TextView-->
<!--            android:id="@+id/url_server_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/server_sample"-->
<!--            android:textSize="14sp"-->
<!--            android:textColor="?android:attr/textColorSecondary" />-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingHorizontal="@dimen/margin_screen"
            android:paddingBottom="@dimen/half_margin_screen"
            android:text="@string/information"
            android:textSize="14sp"
            android:textColor="@color/secondary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_screen"
            android:alpha="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_marginHorizontal="@dimen/margin_screen"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_screen"
            android:alpha="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_version"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:paddingVertical="@dimen/margin_screen"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
